--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,6 +1,7 @@
 .row
   .col
-    %h1 Resend confirmation instructions
+    %h1
+      = I18n.t('devise.confirmations.new.resend_confirmation')
 = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
   .row
     .col
@@ -8,9 +9,9 @@
   %br
   .row
     .col
-      = f.submit "Resend confirmation instructions", class: "btn-secondary input-block"
+      = f.submit I18n.t('devise.confirmations.new.btn_resend'), class: "btn-secondary input-block"
   .row
     .col
       %br
-      = link_to "Have an account? Log in", new_session_path(resource_name), class: "pull-right"
+      = link_to I18n.t('devise.confirmations.new.lnk_login'), new_session_path(resource_name), class: "pull-right"
 = devise_error_messages!
