--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,7 +1,9 @@
 .row
   .col
-    %h1 Login problems?
-    %p Enter your email and we'll send you a link to reset your password
+    %h1
+      = I18n.t('devise.passwords.new.login_problems')
+    %p
+      = I18n.t('devise.passwords.new.enter_email')
 = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
   .row
     .col
@@ -9,12 +11,12 @@
   %br
   .row
     .col
-      = f.submit "Request a password reset", class: "btn-secondary input-block"
+      = f.submit I18n.t('devise.passwords.new.btn_request_pass_reset'), class: "btn-secondary input-block"
   .row
     .col
-      = link_to "I've remembered my password", new_session_path(resource_name), class: "pull-right"
+      = link_to I18n.t('devise.passwords.new.lnk_remembered_pass'), new_session_path(resource_name), class: "pull-right"
       %br
-      = link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name), class: "pull-right"
+      = link_to I18n.t('devise.passwords.new.lnk_didnt_receive_instruction'), new_confirmation_path(resource_name), class: "pull-right"
       %br
-      = link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "pull-right"
+      = link_to I18n.t('devise.passwords.new.lnk_didnt_receive_unlock'), new_unlock_path(resource_name), class: "pull-right"
 = devise_error_messages!
