--- a/app/views/devices/_filters.haml
+++ b/app/views/devices/_filters.haml
@@ -21,7 +21,8 @@
               - select.item "", I18n.t('devices.filters.show_all')
               - select.items @manufacturers, :id, :name
           .filter
-            %label.block Model
+            %label.block
+              = I18n.t('devices.filters.model')
             = cdx_select name: "device_model", value: params["device_model"] do |select|
               - select.item "", I18n.t('devices.filters.show_all')
               - select.items @device_models, :id, :name
