--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,10 +1,10 @@
-<h2>Hello <%= @resource.email %>!</h2>
+<h2><%= I18n.t('devise.mailer.reset_password_instructions.hello_txt') %> <%= @resource.email %>!</h2>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p><%= I18n.t('devise.mailer.reset_password_instructions.msg_request_link') %></p>
 
 <div class="button-actions">
-  <%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token), class: "btn btn-primary" %>
+  <%= link_to I18n.t('devise.mailer.reset_password_instructions.lnk_change_password'), edit_password_url(@resource, reset_password_token: @token), class: "btn btn-primary" %>
 </p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= I18n.t('devise.mailer.reset_password_instructions.ignore_email') %></p>
+<p><%= I18n.t('devise.mailer.reset_password_instructions.msg_change_password') %></p>
