--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= I18n.t('devise.mailer.unlock_instructions.hello_txt') %> <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<p><%= I18n.t('devise.mailer.unlock_instructions.msg_acc_locked') %></p>
 
-<p>Click the link below to unlock your account:</p>
+<p><%= I18n.t('devise.mailer.unlock_instructions.msg_unlock') %></p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to I18n.t('devise.mailer.unlock_instructions.lnk_unlock'), unlock_url(@resource, unlock_token: @token) %></p>
