--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,28 +1,29 @@
 .row
   .col
-    %h1 Sign up
+    %h1
+      = I18n.t('devise.registrations.new.sign_up')
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   .row
     .col
-      = f.text_field :first_name, autofocus: true, placeholder: 'First name', class: 'input-block'
+      = f.text_field :first_name, autofocus: true, placeholder: I18n.t('devise.registrations.new.first_name'), class: 'input-block'
   .row
     .col
-      = f.text_field :last_name, placeholder: 'Last name', class: 'input-block'
+      = f.text_field :last_name, placeholder: I18n.t('devise.registrations.new.last_name'), class: 'input-block'
   .row
     .col
       = f.email_field :email, placeholder: 'Email', class: "input-block"
   .row
     .col
-      = f.password_field :password, autocomplete: "off", placeholder: 'Password', class: "input-block"
+      = f.password_field :password, autocomplete: "off", placeholder: I18n.t('devise.registrations.new.password'), class: "input-block"
       - if @minimum_password_length
         .small-quote.pull-right
-          (#{@minimum_password_length} characters minimum)
+          (#{@minimum_password_length} #{I18n.t('devise.registrations.new.characters')})
   %br
   .row
     .col
-      = f.submit "Sign up", class: "btn-secondary input-block"
+      = f.submit I18n.t('devise.registrations.new.btn_sign_up'), class: "btn-secondary input-block"
     .col.text-right
-      = link_to "Have an account? Log in", new_session_path(resource_name)
+      = link_to I18n.t('devise.registrations.new.lnk_login'), new_session_path(resource_name)
       %br
-      = link_to "Login problems?", new_password_path(resource_name)
+      = link_to I18n.t('devise.registrations.new.lnk_login_problem'), new_password_path(resource_name)
 = devise_error_messages!
