--- a/app/views/encounters/edit.html.haml
+++ b/app/views/encounters/edit.html.haml
@@ -6,6 +6,6 @@
           %h2
             = link_to test_orders_path, class: 'side-link', title: I18n.t('views.back') do
               = image_tag "arrow-left.png"
-            Test Order
+            = I18n.t('encounters.edit.test_order')
 
 = react_component('EncounterForm', encounter: @encounter_as_json, context: @navigation_context.to_hash, possible_assay_results: @possible_assay_results, manual_sample_entry: @encounter.site.allows_manual_entry)
