--- a/app/views/encounters/new_index.html.haml
+++ b/app/views/encounters/new_index.html.haml
@@ -4,20 +4,24 @@
       %h2
         = link_to test_orders_path, class: 'side-link', title: I18n.t('views.back') do
           = image_tag "arrow-left-white.png"
-        New Tests
+        = I18n.t('encounters.new_index.new_tests')
 
 
 .row
   .optionsarea
     %header 
       %h3
-        Please select one of the options below.
+        = I18n.t('encounters.new_index.select_option')
     %ul.nav-list
       %li{'data-href' => new_encounter_path(mode: 'fresh_tests')}
-        %span New test order
+        %span
+          = I18n.t('encounters.new_index.new_test_order')
         .text-small.muted
-          %i Order diagnostic tests against patients and samples. Specify sample type, test type, reason for examination and due date. Add sample IDs or use the sample ID generator.
+          %i
+            = I18n.t('encounters.new_index.order_diagnostic_test')
       %li{'data-href' => new_encounter_path(mode: 'existing_tests')}
-        %span Already reported tests
+        %span
+          = I18n.t('encounters.new_index.reported_test')
         .text-small.muted
-          %i Organise and assign test results to patients. Review results and provide diagnosis.
+          %i
+            = I18n.t('encounters.new_index.organise_test_result')
