--- a/app/views/home/settings.html.haml
+++ b/app/views/home/settings.html.haml
@@ -4,47 +4,48 @@
   .container
     .section.group
       .col.col-12
-        %h1 Settings
+        %h1
+          = I18n.t('home.settings.header_settings')
 
     .section.settings.centered
       -# ------------ ALERTS
       - if has_access_to_test_results_index?
-        = setting_card title: "Alerts", href: alerts_path, icon: 'fa-exclamation-triangle', colour: 'red' do |c|
+        = setting_card title: I18n.t('home.settings.alert'), href: alerts_path, icon: 'fa-exclamation-triangle', colour: 'red' do |c|
           - c.body do
-            Keep your team notified about important stuff.
+            = I18n.t('home.settings.alert_body')
 
       -# ------------ ROLES
       - if has_access_to_roles_index_display?
-        = setting_card title: pluralize(@roles_count, "Role"), href: roles_path, icon: 'fa-toggle-on', colour:'silver' do |c|
+        = setting_card title: I18n.t('home.settings.role', count: @roles_count), href: roles_path, icon: 'fa-toggle-on', colour:'silver' do |c|
           - c.body do
-            Manage users permissions with reusable policies
+            = I18n.t('home.settings.role_body')
 
       -# ------------ SITES
       - if has_access_to_sites_index?
-        = setting_card title: "Sites", href: sites_path, icon: 'fa-university', colour:'blue' do | c |
+        = setting_card title: I18n.t('home.settings.sites'), href: sites_path, icon: 'fa-university', colour:'blue' do | c |
           - c.body do
-            Manage the Sites
+            = I18n.t('home.settings.sites_body')
 
       -# ------------ LOGS
       - if has_access?(Device, Policy::Actions::SUPPORT_DEVICE)
-        = setting_card title: "Messages", href: device_messages_path, icon: 'fa-bell', colour:'orange' do | c |
+        = setting_card title: I18n.t('home.settings.messages'), href: device_messages_path, icon: 'fa-bell', colour:'orange' do | c |
           - c.body do
-            Manage the Logs
+            = I18n.t('home.settings.messages_body')
 
       -# ------------ MODELS
       - if has_access_to_device_models_index?
-        = setting_card title: "Models", href: device_models_path, icon: 'fa-mobile', colour:'light-green' do | c |
+        = setting_card title: I18n.t('home.settings.models'), href: device_models_path, icon: 'fa-mobile', colour:'light-green' do | c |
           - c.body do
-            Manage Device Models
+            = I18n.t('home.settings.models_body')
 
       -# ------------ USERS
       - if has_access_to_users_index?
-        = setting_card title: "Users", href: users_path, icon: 'fa-users', colour:'blue' do | c |
+        = setting_card title: I18n.t('home.settings.users'), href: users_path, icon: 'fa-users', colour:'blue' do | c |
           - c.body do
-            Manager Users
+            = I18n.t('home.settings.users_body')
 
       -# ------------ FTP settings
       - if @institution && has_access?(@institution, Policy::Actions::UPDATE_INSTITUTION)
-        = setting_card title: "FTP", href: edit_ftp_setting_path(@institution), icon: 'fa-download', colour:'light-green' do | c |
+        = setting_card title: I18n.t('home.settings.ftp'), href: edit_ftp_setting_path(@institution), icon: 'fa-download', colour:'light-green' do | c |
           - c.body do
-            Device FTP settings
+            = I18n.t('home.settings.ftp_body')
