--- a/app/views/home/verify.haml
+++ b/app/views/home/verify.haml
@@ -1,6 +1,6 @@
 .message
   = image_tag "ic-email-black.png"
   %h1
-    Check your email to verify your account
+    = I18n.t('home.verify.check_email')
     %small
-      Look for email with the subject "CDX account verification"
+      = I18n.t('home.verify.look_email')
