--- a/app/views/institutions/edit.haml
+++ b/app/views/institutions/edit.haml
@@ -1,5 +1,5 @@
 - if @can_create
-  = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: 'Create Institution'
+  = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: I18n.t('institutions.edit.btn_create')
 - else
   - content_for(:subheader) do
     .row.center.edit
