--- a/app/views/institutions/index.haml
+++ b/app/views/institutions/index.haml
@@ -1,14 +1,15 @@
 .row
   .col
     - if @can_create
-      = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: 'Add Institution'
+      = link_to "+", new_institution_path, class: 'btn-add side-link ontop fix', title: I18n.t('institutions.index.btn_add')
 
-    = cdx_table title: 'Institutions' do |t|
+    = cdx_table title: I18n.t('institutions.index.institution') do |t|
       - t.columns do
         %col{:width => "100%"}
       - t.thead do
         %tr
-          %th Name
+          %th
+            = I18n.t('institutions.index.name')
       - t.tbody do
         - @institutions.each do |institution|
           %tr
