--- a/app/views/institutions/pending_approval.haml
+++ b/app/views/institutions/pending_approval.haml
@@ -1,6 +1,6 @@
 .message
   = image_tag "ic-email-black.png"
   %h1
-    Please contact your system's administrator
+    = I18n.t('institutions.pending_approval.contact_admin')
     %small
-      Your account needs to be activated in order to have access to the system
+      = I18n.t('institutions.pending_approval.acc_need_active')
