--- a/app/views/device_mailer/setup_instructions.html.haml
+++ b/app/views/device_mailer/setup_instructions.html.haml
@@ -1,23 +1,27 @@
-%h1= "Setup instructions for #{@device.name}"
+%h1
+  = "#{I18n.t('setup_instructions.setup_for')} #{@device.name}"
 
 %p
-  Please, contact the administrator for the
+  = I18n.t('setup_instructions.contact_for')
   - if @device.device_model.supports_activation?
-    %b activation code
+    %b
+      = I18n.t('setup_instructions.activation_code')
   - else
-    %b secret key
+    %b
+      = I18n.t('setup_instructions.secret_key')
 
 - if !@device.device_model.supports_activation?
-  %h2 Device Id
+  %h2
+    = I18n.t('setup_instructions.device_id')
   %p= @device.uuid
   = image_tag attachments['device_id.png'].url
 
 - if @device.device_model.support_url.present?
   %p
-    Online support
+    = I18n.t('setup_instructions.support')
     = link_to @device.device_model.support_url, @device.device_model.support_url
 
 - if @device.device_model.setup_instructions.present?
   %p
-    Download instructions as a
-    = link_to "pdf file", absolute_url(@device.device_model.setup_instructions.url)
+    = I18n.t('setup_instructions.download')
+    = link_to I18n.t('setup_instructions.pdf'), absolute_url(@device.device_model.setup_instructions.url)
