--- a/app/views/device_models/edit.haml
+++ b/app/views/device_models/edit.haml
@@ -4,7 +4,7 @@
       %h2
         = link_to device_models_path, class: 'side-link', title: I18n.t('views.back') do
           = image_tag "arrow-left-white.png"
-        Editing Device Model
+        = I18n.t('device_models.edit.edit_device')
   .testflow
     .container
       = render 'form'
