--- a/app/views/device_models/new.haml
+++ b/app/views/device_models/new.haml
@@ -4,7 +4,7 @@
       %h2
         = link_to device_models_path, class: 'side-link', title: I18n.t('views.back') do
           = image_tag "arrow-left-white.png"
-        New Device Model
+        = I18n.t('device_models.new.new_device')
   
   .testflow
     .container
