Translation: Add more translation

--- a/app/assets/javascripts/components/policy_item.js.jsx.erb
+++ b/app/assets/javascripts/components/policy_item.js.jsx.erb
@@ -10,7 +10,7 @@ var PolicyItem = React.createClass({
       return (
         <div>
           <div className="resource-type">
-            New Policy
+            {I18n.t("components.policy_item.new_policy")}
             <img src="<%= asset_url('ic-cross.png') %>" className="pull-right" onClick={this.remove} />
           </div>
           <div className="description">{I18n.t("components.policy_item.description_msg")}</div>
@@ -20,9 +20,9 @@ var PolicyItem = React.createClass({
       var withSubsites = "";
       if(statement.includeSubsites) {
         if(statement.resourceType == "site") {
-          withSubsites = " and subsites";
+          withSubsites = I18n.t("components.policy_item.and_subsites");
         } else {
-          withSubsites = " at site and subsites";
+          withSubsites = I18n.t("components.policy_item.at_site_and_subsites");
         }
       }
       var inherits = _.find(statement.actions, function(action) { return action.id == '*' });
@@ -32,7 +32,7 @@ var PolicyItem = React.createClass({
       } else {
         var actions = _.filter(statement.actions, function(action) { return action.resource == statement.resourceType });
         if(actions.length == 0) {
-          description = "No actions granted";
+          description = I18n.t("components.policy_item.no_actions_granted");
         } else {
           description = _.map(actions, function(action) { return action.label; }).join(", ");
         }
