--- a/app/views/policies/_form.html.haml
+++ b/app/views/policies/_form.html.haml
@@ -1,25 +1,26 @@
 = form_for @policy do |f|
   - if @policy.errors.any?
     #error_explanation
-      %p= "#{pluralize(@policy.errors.count, "error")} prohibited this policy from being saved:"
+      %p
+        = "#{I18n.t('policies.form.error_count', count: @policy.errors.count)} #{I18n.t('policies.form.prohibited')}"
       %ul
         - @policy.errors.full_messages.each do |msg|
           %li= msg
 
   .row
     .col.pe-2
-      = f.label :name
+      = f.label :name, I18n.t('policies.form.name_label')
     .col
       = f.text_field :name
   .row
     .col.pe-2
-      = f.label :user_id
+      = f.label :user_id, I18n.t('policies.form.user_id_label')
     .col
       = f.text_field :user_id
 
   .row
     .col.pe-2
-      = f.label :definition
+      = f.label :definition, I18n.t('policies.form.definition_label')
     .col.pe-3
       .value
         = f.text_area :definition, :rows => 5, :class => 'input-block'
