--- a/app/views/culture_results/_form.haml
+++ b/app/views/culture_results/_form.haml
@@ -2,22 +2,22 @@
   = validation_errors @culture_result
   .row
     .col.pe-2
-      = f.label :sample_collected_on
+      = f.label :sample_collected_on, I18n.t('culture_results.form.sample_collected_on')
     .col
       = f.date_field :sample_collected_on
   .row
     .col.pe-2
-      = f.label :media_used
+      = f.label :media_used, I18n.t('culture_results.form.media_used')
     .col
       = f.collection_select :media_used, CultureResult.media_options, :first, :last
   .row
     .col.pe-2
-      = f.label :serial_number
+      = f.label :serial_number, I18n.t('culture_results.form.serial_number')
     .col
       = f.text_field :serial_number
   .row
     .col.pe-2
-      = f.label :test_result
+      = f.label :test_result, I18n.t('culture_results.form.test_result')
     .col
       = f.radio_button :test_result, 'negative'
       %label{for: 'culture_result_test_result_negative'}
@@ -42,13 +42,13 @@
         = I18n.t('select.culture.test_result_options.contaminated')
   .row
     .col.pe-2
-      = f.label :examined_by
+      = f.label :examined_by, I18n.t('culture_results.form.examined_by')
     .col
       = f.text_field :examined_by
 
   .row
     .col.pe-2
-      = f.label :result_on
+      = f.label :result_on, I18n.t('culture_results.form.result_on')
     .col
       = f.date_field :result_on
 
