--- a/app/views/patients/_form.html.haml
+++ b/app/views/patients/_form.html.haml
@@ -6,7 +6,7 @@
 
   .row.header
     .col.pe-2
-      = f.label :institution
+      = f.label :institution, I18n.t('patients.form.institution_label')
     .col
       .value= f.object.institution
 
@@ -14,30 +14,30 @@
 
   .row.nickname
     .col.pe-2
-      = f.label :nickname
+      = f.label :nickname, I18n.t('patients.form.nickname_label')
     .col
       = f.text_field :nickname, :class => 'input-large'
 
   .row
     .col.pe-2
-      = f.label :entity_id
+      = f.label :entity_id, I18n.t('patients.form.entity_id_label')
     .col
       = f.text_field :entity_id, :class => 'input-large', readonly: !@patient.new_record?
 
   .row
     .col.pe-2
-      = f.label :gender
+      = f.label :gender, I18n.t('patients.form.gender_label')
     .col
       = f.collection_select :gender, Patient.gender_options, :first, :last
 
   .row
     .col.pe-2
-      = f.label :birth_date_on
+      = f.label :birth_date_on, I18n.t('patients.form.birth_date_on_label')
     .col
       = f.date_select :birth_date_on, order: [:day, :month, :year], prompt: { day: I18n.t('patients.form.select_day'), month: I18n.t('patients.form.select_month'), year: I18n.t('patients.form.select_year') }, start_year: Date.today.year, end_year: Date.today.year - 100
   .row
     .col.pe-2
-      = f.label 'Estimate Age'
+      = f.label I18n.t('patients.form.estimate_age')
     .col
       = f.text_field 'age', :class=>'input-large'
       %script
@@ -58,13 +58,13 @@
 
   .row
     .col.pe-2
-      = f.label :email
+      = f.label :email, I18n.t('patients.form.email_label')
     .col
       = f.text_field :email, :class => 'input-large'
 
   .row
     .col.pe-2
-      = f.label :phone
+      = f.label :phone, I18n.t('patients.form.phone_label')
     .col
       = f.text_field :phone, :class => 'input-large'
 
