--- a/app/views/subscribers/_form.html.haml
+++ b/app/views/subscribers/_form.html.haml
@@ -1,20 +1,21 @@
 = form_for(subscriber) do |f|
   - if subscriber.errors.any?
     #error_explanation
-      %p= "#{pluralize(subscriber.errors.count, "error")} prohibited this subscriber from being saved:"
+      %p
+        = "#{I18n.t('subscribers.form.error_count', count: subscriber.errors.count)} #{I18n.t('subscribers.form.prohibited')}"
       %ul
         - subscriber.errors.full_messages.each do |msg|
           %li= msg
 
   .row
     .col.pe-2
-      = f.label :filter
+      = f.label :filter, I18n.t('subscribers.form.filter_label')
     .col
       = cdx_select form: f, name: :filter_id do |select|
         - select.items filters, :id, :name
   .row
     .col.pe-2
-      = f.label :name
+      = f.label :name, I18n.t('subscribers.form.name_label')
     .col
       = f.text_field :name
   .row
@@ -31,17 +32,17 @@
         - select.items Subscriber::VALID_VERBS
   .row
     .col.pe-2
-      = f.label :url_user, "User (optional)"
+      = f.label :url_user, I18n.t('subscribers.form.user_label')
     .col
       = f.text_field :url_user
   .row
     .col.pe-2
-      = f.label :url_password, "Password (optional)"
+      = f.label :url_password, I18n.t('subscribers.form.password_label')
     .col
       = f.password_field :url_password
   .row
     .col.pe-2
-      = f.label :fields
+      = f.label :fields, , I18n.t('subscribers.form.fields_label')
     .col
       .value.annotation Empty selection will send all fields
       - Subscriber.available_field_names.sort.each do |field|
