--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -6,7 +6,7 @@
   = (@total.to_f / @page_size).ceil
 %span(style="display: inline-block;")
   = cdx_select name: "page_size_select", value: @page_size, class: 'input-large' do |select|
-    - select.items PagingHelper::PAGE_SIZE_OPTIONS, :second, :first
+    - select.items paginate_option, :second, :first
 :javascript
   $(function(){
     $(document).on('change', 'input[name=page_size_select]', function(){
