--- a/cdx_core/app/views/patients/_form.html.haml
+++ b/cdx_core/app/views/patients/_form.html.haml
@@ -6,7 +6,10 @@
 
   .row.header
     .col.pe-2
-      = f.label :institution
+      %div.tooltip
+        = f.label :institution
+        %div.tooltiptext_r
+          = I18n.t('patients.form.institution_tooltip')
     .col
       .value= f.object.institution
 
@@ -14,42 +17,55 @@
 
   .row.nickname
     .col.pe-2
-      = f.label :nickname
+      %div.tooltip
+        = f.label :nickname
+        %div.tooltiptext_r
+          = I18n.t('patients.form.nickname_tooltip')
     .col
       = f.text_field :nickname, :class => 'input-large'
 
   .row
     .col.pe-2
-      = f.label :entity_id
+      %div.tooltip
+        = f.label :entity_id
+        %div.tooltiptext_r
+          = I18n.t('patients.form.entity_id_tooltip')
     .col
       = f.text_field :entity_id, :class => 'input-large', readonly: !@patient.new_record?
 
   .row
     .col.pe-2
-      = f.label :gender
+      %div.tooltip
+        = f.label :gender
+        %div.tooltiptext_r
+          = I18n.t('patients.form.gender_tooltip')
     .col
       = f.collection_select :gender, Patient.gender_options, :first, :last
 
   .row
     .col.pe-2
-      = f.label :birth_date_on
+      %div.tooltip
+        = f.label :birth_date_on
+        %div.tooltiptext_r
+          = I18n.t('patients.form.birthdate_tooltip')
     .col
       = f.date_select :birth_date_on, order: [:day, :month, :year], prompt: { day: I18n.t('patients.form.select_day'), month: I18n.t('patients.form.select_month'), year: I18n.t('patients.form.select_year') }, start_year: Date.today.year, end_year: Date.today.year - 100
   .row
     .col.pe-2
-      = f.label 'Estimate Age'
+      %div.tooltip
+        = f.label 'Estimated Age'
+        %div.tooltiptext_r
+          = I18n.t('patients.form.estimate_age_tooltip')
+
     .col
       = f.text_field 'age', :class=>'input-large'
       %script
         $('#patient_age').on('blur', function(){
         var cyear = new Date().getFullYear();
         var tyear = cyear - $(this).val();
-        console.log('Setting Year to: '+tyear);
         $('#patient_birth_date_on_1i').val(tyear);
-        $('#patient_birth_date_on_2i').val(new Date().getMonth());
-        $('#patient_birth_date_on_3i').val(new Date().getDate());
         });
-  
+
   - count = 0
   = f.fields_for :addresses do |addresses_form|
     - count = count + 1
@@ -58,13 +74,19 @@
 
   .row
     .col.pe-2
-      = f.label :email
+      %div.tooltip
+        = f.label :email
+        %div.tooltiptext_r
+          = I18n.t('patients.form.email_tooltip')
     .col
       = f.text_field :email, :class => 'input-large'
 
   .row
     .col.pe-2
-      = f.label :phone
+      %div.tooltip
+        = f.label :phone
+        %div.tooltiptext_r
+          = I18n.t('patients.form.phone_tooltip')
     .col
       = f.text_field :phone, :class => 'input-large'
 
