--- a/cdx_core/app/views/devices/_secret_key.haml
+++ b/cdx_core/app/views/devices/_secret_key.haml
@@ -1,6 +1,8 @@
 - if @device.plain_secret_key
-  .key= @device.plain_secret_key
-  %p= barcode(@device.plain_secret_key)
+  .key
+    = @device.plain_secret_key
+  %p
+    = barcode(@device.plain_secret_key)
   %strong
     = I18n.t('devices.secret_key.warning')
 - else
