--- a/cdx_core/app/views/devise/registrations/edit.html.haml
+++ b/cdx_core/app/views/devise/registrations/edit.html.haml
@@ -29,6 +29,12 @@
   .row
     .col.pe-2
       = f.label :password, I18n.t('devise.registrations.edit.lbl_new_pass')
+      = f.label :current_password, I18n.t('devise.edit.current_password')
+    .col
+      = f.password_field :current_password, autocomplete: "off"
+  .row
+    .col.pe-2
+      = f.label :password, I18n.t('devise.edit.new_password')
     .col
       = f.password_field :password, autocomplete: "off"
   .row
@@ -55,6 +61,7 @@
       = cdx_select form: f, name: :timestamps_in_device_time_zone, class: 'input-xx-large' do |select|
         - select.item false, I18n.t('devise.registrations.edit.select_my_timezone')
         - select.item true, I18n.t('devise.registrations.edit.select_device_timezone')
+      = f.label :timestamps_in_device_time_zone, I18n.t('devise.edit.test_timestamps')
 
   .row.button-actions
     .col
