--- a/cdx_core/app/views/xpert_results/_form.haml
+++ b/cdx_core/app/views/xpert_results/_form.haml
@@ -47,10 +47,18 @@
     $('input[type=radio][name="xpert_result[tuberculosis]"]').change(
       function () {
         if (this.value === 'detected') {
-          console.log('now tb is selected');
           $('.tb-trace').show();
         } else {
           $('.tb-trace').hide();
+        }
+      }
+    );
+
+    $('input[type=radio][name="xpert_result[rifampicin]"]').change(
+      function () {
+        if ((this.value === 'detected') && ($("input:radio[name='xpert_result[tuberculosis]']:checked").val() !== 'detected')) {
+          alert(I18n.t('xpert_results.form.rifampicin_detected'))
+          $("input:radio[name='xpert_result[rifampicin]']").attr('checked', false);
         }
       }
     );
