Added missing sentence.

--- a/cdx_core/app/views/device_models/_publish.haml
+++ b/cdx_core/app/views/device_models/_publish.haml
@@ -16,6 +16,7 @@
     .col
       = I18n.t('device_models.publish.not_published')
       - if can_publish
+        = I18n.t('device_models.publish.publishing')
 
   - if can_publish
     .row
