--- a/cdx_core/app/views/patients/_form.html.haml
+++ b/cdx_core/app/views/patients/_form.html.haml
@@ -62,7 +62,7 @@
   .row
     .col.pe-2
       %div.tooltip
-        = f.label 'Estimated Age'
+        = f.label I18n.t('patients.form.estimate_age')
         %div.tooltiptext_r
           = I18n.t('patients.form.estimate_age_tooltip')
 
