--- a/cdx_core/app/views/patients/_form.html.haml
+++ b/cdx_core/app/views/patients/_form.html.haml
@@ -36,6 +36,15 @@
   .row
     .col.pe-2
       %div.tooltip
+        = f.label :medical_insurance_num
+        %div.tooltiptext_r
+          = I18n.t('patients.form.medical_insurance_num_tooltip')
+    .col
+      = f.text_field :medical_insurance_num, :class => 'input-large'
+
+  .row
+    .col.pe-2
+      %div.tooltip
         = f.label :entity_id
         %div.tooltiptext_r
           = I18n.t('patients.form.entity_id_tooltip')
